MNIST anormaly detection

--- a/VariationalAutoencoder/prepare_model/keras/Untitled.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/Untitled.ipynb
@@ -25,7 +25,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
-    "import os"
+    "import os, datetime\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\""
    ]
   },
   {
@@ -85,46 +87,49 @@
    "outputs": [],
    "source": [
     "#ヒートマップの計算\n",
-    "def evaluate_img(model, x_normal, x_anomaly, name, height=8, width=8, move=2):\n",
-    "    img_normal = np.zeros((x_normal.shape))\n",
-    "    img_anomaly = np.zeros((x_normal.shape))\n",
+    "def evaluate_img(model, arg_x_normal, arg_x_anomaly, name, height=8, width=8, move=2):\n",
+    "#     for x_normal, x_anomaly in zip(arg_x_normal, arg_x_anomaly):\n",
+    "    for x_anomaly in arg_x_anomaly:\n",
+    "        x_normal = np.asarray([arg_x_normal[0]])\n",
+    "        x_anomaly = np.asarray([x_anomaly])\n",
+    "        img_normal = np.zeros((x_normal.shape))\n",
+    "        img_anomaly = np.zeros((x_normal.shape))\n",
+    "        for i in range(int((x_normal.shape[1]-height)/move)):\n",
+    "            for j in range(int((x_normal.shape[2]-width)/move)):\n",
+    "                x_sub_normal = x_normal[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
+    "                x_sub_anomaly = x_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
+    "                x_sub_normal = x_sub_normal.reshape(1, height, width, 1)\n",
+    "                x_sub_anomaly = x_sub_anomaly.reshape(1, height, width, 1)\n",
     "\n",
-    "    for i in range(int((x_normal.shape[1]-height)/move)):\n",
-    "        for j in range(int((x_normal.shape[2]-width)/move)):\n",
-    "            x_sub_normal = x_normal[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
-    "            x_sub_anomaly = x_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
-    "            x_sub_normal = x_sub_normal.reshape(1, height, width, 1)\n",
-    "            x_sub_anomaly = x_sub_anomaly.reshape(1, height, width, 1)\n",
+    "                #従来手法\n",
+    "                if name == \"old_\":\n",
+    "                    #正常のスコア\n",
+    "                    normal_score = model.evaluate(x_sub_normal, batch_size=1, verbose=0)\n",
+    "                    img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  normal_score\n",
     "\n",
-    "            #従来手法\n",
-    "            if name == \"old_\":\n",
-    "                #正常のスコア\n",
-    "                normal_score = model.evaluate(x_sub_normal, batch_size=1, verbose=0)\n",
-    "                img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  normal_score\n",
+    "                    #異常のスコア\n",
+    "                    anomaly_score = model.evaluate(x_sub_anomaly, batch_size=1, verbose=0)\n",
+    "                    img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  anomaly_score\n",
     "\n",
-    "                #異常のスコア\n",
-    "                anomaly_score = model.evaluate(x_sub_anomaly, batch_size=1, verbose=0)\n",
-    "                img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  anomaly_score\n",
+    "                #提案手法\n",
+    "                else:\n",
+    "                    #正常のスコア\n",
+    "                    mu, sigma = model.predict(x_sub_normal, batch_size=1, verbose=0)\n",
+    "                    loss = 0\n",
+    "                    for k in range(height):\n",
+    "                        for l in range(width):\n",
+    "                            loss += 0.5 * (x_sub_normal[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
+    "                    img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
     "\n",
-    "            #提案手法\n",
-    "            else:\n",
-    "                #正常のスコア\n",
-    "                mu, sigma = model.predict(x_sub_normal, batch_size=1, verbose=0)\n",
-    "                loss = 0\n",
-    "                for k in range(height):\n",
-    "                    for l in range(width):\n",
-    "                        loss += 0.5 * (x_sub_normal[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
-    "                img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
+    "                    #異常のスコア\n",
+    "                    mu, sigma = model.predict(x_sub_anomaly, batch_size=1, verbose=0)\n",
+    "                    loss = 0\n",
+    "                    for k in range(height):\n",
+    "                        for l in range(width):\n",
+    "                            loss += 0.5 * (x_sub_anomaly[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
+    "                    img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
     "\n",
-    "                #異常のスコア\n",
-    "                mu, sigma = model.predict(x_sub_anomaly, batch_size=1, verbose=0)\n",
-    "                loss = 0\n",
-    "                for k in range(height):\n",
-    "                    for l in range(width):\n",
-    "                        loss += 0.5 * (x_sub_anomaly[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
-    "                img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
-    "\n",
-    "    save_img(x_normal, x_anomaly, img_normal, img_anomaly, name)"
+    "        save_img(x_normal, x_anomaly, img_normal, img_anomaly, name)"
    ]
   },
   {
@@ -189,6 +194,13 @@
     "#1と9のデータ抽出\n",
     "x_train_1 = []\n",
     "x_test_1 = []\n",
+    "x_test_2 = []\n",
+    "x_test_3 = []\n",
+    "x_test_4 = []\n",
+    "x_test_5 = []\n",
+    "x_test_6 = []\n",
+    "x_test_7 = []\n",
+    "x_test_8 = []\n",
     "x_test_9 = []\n",
     "\n",
     "x_train_shape = x_train.shape\n",
@@ -206,17 +218,59 @@
     "  if y_test[i] == 1:#スニーカーは7\n",
     "    temp = x_test[i,:,:,:]\n",
     "    x_test_1.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 2:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_2.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 3:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_3.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 4:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_4.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 5:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_5.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "\n",
+    "  if y_test[i] == 6:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_6.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 7:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_7.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
+    "    \n",
+    "  if y_test[i] == 8:\n",
+    "    temp = x_test[i,:,:,:]\n",
+    "    x_test_8.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
     "\n",
     "  if y_test[i] == 9:\n",
     "    temp = x_test[i,:,:,:]\n",
     "    x_test_9.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
     "\n",
     "x_test_1 = np.array(x_test_1)\n",
-    "x_test_9 = np.array(x_test_9)\n",
-    "\n",
+    "x_test_2 = np.array(x_test_2)\n",
+    "x_test_3 = np.array(x_test_3)\n",
+    "x_test_4 = np.array(x_test_4)\n",
+    "x_test_5 = np.array(x_test_5)\n",
+    "x_test_6 = np.array(x_test_6)\n",
+    "x_test_7 = np.array(x_test_7)\n",
+    "x_test_8 = np.array(x_test_8)\n",
+    "x_test_9 = np.array(x_test_9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# network parameters\n",
     "input_shape=(8, 8, 1)\n",
-    "batch_size = 128\n",
+    "batch_size = 1024\n",
     "latent_dim = 2\n",
     "epochs = 10\n",
     "Nc = 16\n",
@@ -279,14 +333,22 @@
     "\n",
     "vae_loss = K.mean(kl_loss + m_vae_loss + a_vae_loss)\n",
     "vae.add_loss(vae_loss)\n",
-    "vae.compile(optimizer='adam')\n",
-    "\n",
+    "vae.compile(optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# train the autoencoder\n",
     "vae.fit(x_train_1,\n",
     "        epochs=epochs,\n",
     "        batch_size=batch_size)\n",
     "        #validation_data=(x_test, None))\n",
-    "vae.save_weights('vae_mlp_mnist.h5')"
+    "now = datetime.datetime.now()\n",
+    "vae.save_weights(\"vae_mnist_{0:%Y%m%d_%H%M%S}.h5\".format(now))"
    ]
   },
   {
@@ -312,10 +374,54 @@
    "outputs": [],
    "source": [
     "#従来手法の可視化\n",
-    "evaluate_img(vae, test_normal, test_anomaly, \"old_\")\n",
+    "#evaluate_img(vae, test_normal, test_anomaly, \"old_\")\n",
     "\n",
     "#提案手法の可視化\n",
-    "evaluate_img(vae, test_normal, test_anomaly, \"new_\")"
+    "# evaluate_img(vae, test_normal, test_anomaly, \"new_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "evaluate_img(vae, x_test_1[:50], x_test_2[:50], \"new_\")\n",
+    "evaluate_img(vae, x_test_1[:50], x_test_3[:50], \"new_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "evaluate_img(vae, x_test_1[:50], x_test_4[:50], \"new_\")\n",
+    "evaluate_img(vae, x_test_1[:50], x_test_5[:50], \"new_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_img(vae, x_test_1[:50], x_test_6[:50], \"new_\")\n",
+    "evaluate_img(vae, x_test_1[:50], x_test_7[:50], \"new_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_img(vae, x_test_1[:50], x_test_8[:50], \"new_\")\n",
+    "evaluate_img(vae, x_test_1[:50], x_test_9[:50], \"new_\")"
    ]
   },
   {
