--- a/VariationalAutoencoder/prepare_model/keras/Untitled.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/Untitled.ipynb
@@ -27,7 +27,9 @@
     "import matplotlib.colors as colors\n",
     "import os, datetime\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "\n",
+    "import loadimg"
    ]
   },
   {
@@ -185,6 +187,7 @@
     "#(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
     "\n",
+    "\n",
     "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1)\n",
     "x_test = x_test.reshape(x_test.shape[0], 28, 28, 1)\n",
     "\n",
@@ -268,6 +271,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_train, x_test, y_train, y_test, n_class = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
+    "                                                       imgsize=28,\n",
+    "                                                       isdirs=False,\n",
+    "                                                       normalize=True,\n",
+    "                                                       onehot=True,\n",
+    "                                                       grayscale=True)\n",
+    "x_train = cut_img(x_train, 100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# network parameters\n",
     "input_shape=(8, 8, 1)\n",
     "batch_size = 1024\n",
@@ -343,7 +361,8 @@
    "outputs": [],
    "source": [
     "# train the autoencoder\n",
-    "vae.fit(x_train_1,\n",
+    "#vae.fit(x_train_1,\n",
+    "vae.fit(x_train,\n",
     "        epochs=epochs,\n",
     "        batch_size=batch_size)\n",
     "        #validation_data=(x_test, None))\n",
@@ -358,11 +377,15 @@
    "outputs": [],
    "source": [
     "#正常/異常のテストデータ\n",
-    "idx1 = np.random.randint(len(x_test_1))\n",
-    "idx2 = np.random.randint(len(x_test_9))\n",
+    "#idx1 = np.random.randint(len(x_test_1))\n",
+    "#idx2 = np.random.randint(len(x_test_9))\n",
+    "idx1 = np.random.randint(len(x_test))\n",
+    "idx2 = idx1\n",
     "\n",
-    "test_normal = x_test_1[idx1,:,:,:]\n",
-    "test_anomaly = x_test_9[idx2,:,:,:]\n",
+    "#test_normal = x_test_1[idx1,:,:,:]\n",
+    "test_normal = x_test[idx1,:,:,:]\n",
+    "#test_anomaly = x_test_9[idx2,:,:,:]\n",
+    "test_anomaly = x_test[idx2,:,:,:]\n",
     "test_normal = test_normal.reshape(1, test_normal.shape[0], test_normal.shape[1], test_normal.shape[2])\n",
     "test_anomaly = test_anomaly.reshape(test_normal.shape)"
    ]
@@ -377,7 +400,9 @@
     "#evaluate_img(vae, test_normal, test_anomaly, \"old_\")\n",
     "\n",
     "#提案手法の可視化\n",
-    "# evaluate_img(vae, test_normal, test_anomaly, \"new_\")"
+    "# evaluate_img(vae, test_normal, test_anomaly, \"new_\")\n",
+    "\n",
+    "evaluate_img(vae, test_normal, test_anomaly, \"new_\")"
    ]
   },
   {
