vae large filter

--- a/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
@@ -26,10 +26,227 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import os, datetime\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "import loadimg\n",
+    "#os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
+    "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
-    "import loadimg"
+    "import tensorflow as tf\n",
+    "from keras.backend import tensorflow_backend\n",
+    "config = tf.ConfigProto(gpu_options=tf.GPUOptions(allow_growth=True))\n",
+    "session = tf.Session(config=config)\n",
+    "tensorflow_backend.set_session(session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPLIT_SIZE = 32 # multiples of 4\n",
+    "IMG_SIZE = 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8×8のサイズに切り出す\n",
+    "def cut_img(x, number, height=SPLIT_SIZE, width=SPLIT_SIZE):\n",
+    "    print(\"cutting images ...\")\n",
+    "    x_out = []\n",
+    "    x_shape = x.shape\n",
+    "\n",
+    "    for i in range(number):\n",
+    "        shape_0 = np.random.randint(0,x_shape[0])\n",
+    "        shape_1 = np.random.randint(0,x_shape[1]-height)\n",
+    "        shape_2 = np.random.randint(0,x_shape[2]-width)\n",
+    "        temp = x[shape_0, shape_1:shape_1+height, shape_2:shape_2+width, 0]\n",
+    "        x_out.append(temp.reshape((height, width, x_shape[3])))\n",
+    "\n",
+    "    x_out = np.array(x_out)\n",
+    "    print(\"Complete.\", x_out.shape)\n",
+    "\n",
+    "    return x_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reparameterization trick\n",
+    "# instead of sampling from Q(z|X), sample eps = N(0,I)\n",
+    "# z = z_mean + sqrt(var)*eps\n",
+    "def sampling(args):\n",
+    "    z_mean, z_log_var = args\n",
+    "    batch = K.shape(z_mean)[0]\n",
+    "    dim = K.int_shape(z_mean)[1]\n",
+    "    # by default, random_normal has mean=0 and std=1.0\n",
+    "    epsilon = K.random_normal(shape=(batch, dim))\n",
+    "    return z_mean + K.exp(0.5 * z_log_var) * epsilon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, _, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
+    "                                                       imgsize=IMG_SIZE,\n",
+    "                                                       isdirs=False,\n",
+    "                                                       normalize=True,\n",
+    "                                                       onehot=True,\n",
+    "                                                       grayscale=True,\n",
+    "                                                       train_ratio=0.9)\n",
+    "print(\"x_train\", x_train.shape)\n",
+    "\n",
+    "_, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
+    "                                                       imgsize=IMG_SIZE,\n",
+    "                                                       isdirs=False,\n",
+    "                                                       normalize=True,\n",
+    "                                                       onehot=True,\n",
+    "                                                       grayscale=True,\n",
+    "                                                       train_ratio=0.1)\n",
+    "print(\"x_test\", x_test.shape)\n",
+    "\n",
+    "x_train_split = cut_img(x_train, 1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show split images\n",
+    "#plt.figure()\n",
+    "\n",
+    "for i in range(20):\n",
+    "    img = x_train_split[i]\n",
+    "    img = img.reshape((img.shape[0], img.shape[1]))\n",
+    "    img = np.stack((img,img,img), axis=-1)\n",
+    "    #plt.subplot(4, 4, i+1)\n",
+    "    plt.imshow(img)\n",
+    "    plt.show()\n",
+    "#plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# network parameters\n",
+    "input_shape=(SPLIT_SIZE, SPLIT_SIZE, 1)\n",
+    "batch_size = 5160\n",
+    "latent_dim = SPLIT_SIZE//4\n",
+    "epochs = 500\n",
+    "Nc = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build encoder model\n",
+    "inputs = Input(shape=input_shape, name='encoder_input') \n",
+    "x = Conv2D(Nc, kernel_size=2, strides=2)(inputs) \n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Conv2D(2*Nc, kernel_size=2, strides=2)(x) \n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Flatten()(x)\n",
+    "\n",
+    "z_mean = Dense(latent_dim, name='z_mean')(x)\n",
+    "z_log_var = Dense(latent_dim, name='z_log_var')(x)\n",
+    "z = Lambda(sampling, output_shape=(latent_dim,), name='z')([z_mean, z_log_var])\n",
+    "\n",
+    "encoder = Model(inputs, [z_mean, z_log_var, z], name='encoder')\n",
+    "encoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build decoder model\n",
+    "latent_inputs = Input(shape=(latent_dim,), name='z_sampling')\n",
+    "x = Dense(latent_dim*latent_dim)(latent_inputs)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Reshape((latent_dim,latent_dim,1))(x)\n",
+    "x = Conv2DTranspose(2*Nc, kernel_size=2, strides=2, padding='same')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "x = Conv2DTranspose(Nc, kernel_size=2, strides=2, padding='same')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Activation('relu')(x)\n",
+    "\n",
+    "x1 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
+    "x1 = BatchNormalization()(x1)\n",
+    "out1 = Activation('sigmoid')(x1)#out.shape=(n,28,28,1)\n",
+    "\n",
+    "x2 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
+    "x2 = BatchNormalization()(x2)\n",
+    "out2 = Activation('sigmoid')(x2)#out.shape=(n,28,28,1)\n",
+    "\n",
+    "decoder = Model(latent_inputs, [out1, out2], name='decoder')\n",
+    "decoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build VAE model\n",
+    "outputs_mu, outputs_sigma_2 = decoder(encoder(inputs)[2])\n",
+    "vae = Model(inputs, [outputs_mu, outputs_sigma_2], name='vae_mlp')\n",
+    "\n",
+    "# VAE loss\n",
+    "m_vae_loss = (K.flatten(inputs) - K.flatten(outputs_mu))**2 / K.flatten(outputs_sigma_2)\n",
+    "m_vae_loss = 0.5 * K.sum(m_vae_loss)\n",
+    "\n",
+    "a_vae_loss = K.log(2 * 3.14 * K.flatten(outputs_sigma_2))\n",
+    "a_vae_loss = 0.5 * K.sum(a_vae_loss)\n",
+    "\n",
+    "kl_loss = 1 + z_log_var - K.square(z_mean) - K.exp(z_log_var)\n",
+    "kl_loss = K.sum(kl_loss, axis=-1)\n",
+    "kl_loss *= -0.5\n",
+    "\n",
+    "vae_loss = K.mean(kl_loss + m_vae_loss + a_vae_loss)\n",
+    "vae.add_loss(vae_loss)\n",
+    "vae.compile(optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# train the autoencoder\n",
+    "#vae.fit(x_train_1,\n",
+    "vae.fit(x_train_split,\n",
+    "        epochs=epochs,\n",
+    "        batch_size=batch_size)\n",
+    "        #validation_data=(x_test, None))\n",
+    "now = datetime.datetime.now()\n",
+    "vae.save_weights(\"models/vae_mnist_{0:%Y%m%d_%H%M%S}.h5\".format(now))"
    ]
   },
   {
@@ -89,7 +306,8 @@
    "outputs": [],
    "source": [
     "#ヒートマップの計算\n",
-    "def evaluate_img(model, arg_x_normal, arg_x_anomaly, name, height=8, width=8, move=2):\n",
+    "MOVE = 8\n",
+    "def evaluate_img(model, arg_x_normal, arg_x_anomaly, name, height=SPLIT_SIZE, width=SPLIT_SIZE, move=MOVE):\n",
     "#     for x_normal, x_anomaly in zip(arg_x_normal, arg_x_anomaly):\n",
     "    for x_anomaly in arg_x_anomaly:\n",
     "        x_normal = np.asarray([arg_x_normal[0]])\n",
@@ -140,313 +358,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#8×8のサイズに切り出す\n",
-    "def cut_img(x, number, height=8, width=8):\n",
-    "    print(\"cutting images ...\")\n",
-    "    x_out = []\n",
-    "    x_shape = x.shape\n",
-    "\n",
-    "    for i in range(number):\n",
-    "        shape_0 = np.random.randint(0,x_shape[0])\n",
-    "        shape_1 = np.random.randint(0,x_shape[1]-height)\n",
-    "        shape_2 = np.random.randint(0,x_shape[2]-width)\n",
-    "        temp = x[shape_0, shape_1:shape_1+height, shape_2:shape_2+width, 0]\n",
-    "        x_out.append(temp.reshape((height, width, x_shape[3])))\n",
-    "\n",
-    "    print(\"Complete.\")\n",
-    "    x_out = np.array(x_out)\n",
-    "\n",
-    "    return x_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reparameterization trick\n",
-    "# instead of sampling from Q(z|X), sample eps = N(0,I)\n",
-    "# z = z_mean + sqrt(var)*eps\n",
-    "def sampling(args):\n",
-    "    z_mean, z_log_var = args\n",
-    "    batch = K.shape(z_mean)[0]\n",
-    "    dim = K.int_shape(z_mean)[1]\n",
-    "    # by default, random_normal has mean=0 and std=1.0\n",
-    "    epsilon = K.random_normal(shape=(batch, dim))\n",
-    "    return z_mean + K.exp(0.5 * z_log_var) * epsilon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset\n",
-    "#(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
-    "\n",
-    "\n",
-    "x_train = x_train.reshape(x_train.shape[0], 28, 28, 1)\n",
-    "x_test = x_test.reshape(x_test.shape[0], 28, 28, 1)\n",
-    "\n",
-    "x_train = x_train.astype('float32') / 255\n",
-    "x_test = x_test.astype('float32') / 255\n",
-    "\n",
-    "#1と9のデータ抽出\n",
-    "x_train_1 = []\n",
-    "x_test_1 = []\n",
-    "x_test_2 = []\n",
-    "x_test_3 = []\n",
-    "x_test_4 = []\n",
-    "x_test_5 = []\n",
-    "x_test_6 = []\n",
-    "x_test_7 = []\n",
-    "x_test_8 = []\n",
-    "x_test_9 = []\n",
-    "\n",
-    "x_train_shape = x_train.shape\n",
-    "\n",
-    "for i in range(len(x_train)):\n",
-    "  if y_train[i] == 1:#スニーカーは7\n",
-    "    temp = x_train[i,:,:,:]\n",
-    "    x_train_1.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "\n",
-    "x_train_1 = np.array(x_train_1)\n",
-    "x_train_1 = cut_img(x_train_1, 100000)\n",
-    "print(\"train data:\",len(x_train_1))\n",
-    "\n",
     "for i in range(len(x_test)):\n",
-    "  if y_test[i] == 1:#スニーカーは7\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_1.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 2:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_2.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 3:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_3.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 4:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_4.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 5:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_5.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "\n",
-    "  if y_test[i] == 6:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_6.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 7:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_7.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "    \n",
-    "  if y_test[i] == 8:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_8.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "\n",
-    "  if y_test[i] == 9:\n",
-    "    temp = x_test[i,:,:,:]\n",
-    "    x_test_9.append(temp.reshape((x_train_shape[1],x_train_shape[2],x_train_shape[3])))\n",
-    "\n",
-    "x_test_1 = np.array(x_test_1)\n",
-    "x_test_2 = np.array(x_test_2)\n",
-    "x_test_3 = np.array(x_test_3)\n",
-    "x_test_4 = np.array(x_test_4)\n",
-    "x_test_5 = np.array(x_test_5)\n",
-    "x_test_6 = np.array(x_test_6)\n",
-    "x_test_7 = np.array(x_test_7)\n",
-    "x_test_8 = np.array(x_test_8)\n",
-    "x_test_9 = np.array(x_test_9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, x_test, y_train, y_test, n_class = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
-    "                                                       imgsize=28,\n",
-    "                                                       isdirs=False,\n",
-    "                                                       normalize=True,\n",
-    "                                                       onehot=True,\n",
-    "                                                       grayscale=True)\n",
-    "x_train = cut_img(x_train, 100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# network parameters\n",
-    "input_shape=(8, 8, 1)\n",
-    "batch_size = 1024\n",
-    "latent_dim = 2\n",
-    "epochs = 10\n",
-    "Nc = 16\n",
-    "\n",
-    "# build encoder model\n",
-    "inputs = Input(shape=input_shape, name='encoder_input')\n",
-    "x = Conv2D(Nc, kernel_size=2, strides=2)(inputs)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Activation('relu')(x)\n",
-    "x = Conv2D(2*Nc, kernel_size=2, strides=2)(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Activation('relu')(x)\n",
-    "x = Flatten()(x)\n",
-    "\n",
-    "z_mean = Dense(latent_dim, name='z_mean')(x)\n",
-    "z_log_var = Dense(latent_dim, name='z_log_var')(x)\n",
-    "z = Lambda(sampling, output_shape=(latent_dim,), name='z')([z_mean, z_log_var])\n",
-    "\n",
-    "encoder = Model(inputs, [z_mean, z_log_var, z], name='encoder')\n",
-    "#encoder.summary()\n",
-    "\n",
-    "# build decoder model\n",
-    "latent_inputs = Input(shape=(latent_dim,), name='z_sampling')\n",
-    "x = Dense(2*2)(latent_inputs)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Activation('relu')(x)\n",
-    "x = Reshape((2,2,1))(x)\n",
-    "x = Conv2DTranspose(2*Nc, kernel_size=2, strides=2, padding='same')(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Activation('relu')(x)\n",
-    "x = Conv2DTranspose(Nc, kernel_size=2, strides=2, padding='same')(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Activation('relu')(x)\n",
-    "\n",
-    "x1 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
-    "x1 = BatchNormalization()(x1)\n",
-    "out1 = Activation('sigmoid')(x1)#out.shape=(n,28,28,1)\n",
-    "\n",
-    "x2 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
-    "x2 = BatchNormalization()(x2)\n",
-    "out2 = Activation('sigmoid')(x2)#out.shape=(n,28,28,1)\n",
-    "\n",
-    "decoder = Model(latent_inputs, [out1, out2], name='decoder')\n",
-    "#decoder.summary()\n",
-    "\n",
-    "# build VAE model\n",
-    "outputs_mu, outputs_sigma_2 = decoder(encoder(inputs)[2])\n",
-    "vae = Model(inputs, [outputs_mu, outputs_sigma_2], name='vae_mlp')\n",
-    "\n",
-    "# VAE loss\n",
-    "m_vae_loss = (K.flatten(inputs) - K.flatten(outputs_mu))**2 / K.flatten(outputs_sigma_2)\n",
-    "m_vae_loss = 0.5 * K.sum(m_vae_loss)\n",
-    "\n",
-    "a_vae_loss = K.log(2 * 3.14 * K.flatten(outputs_sigma_2))\n",
-    "a_vae_loss = 0.5 * K.sum(a_vae_loss)\n",
-    "\n",
-    "kl_loss = 1 + z_log_var - K.square(z_mean) - K.exp(z_log_var)\n",
-    "kl_loss = K.sum(kl_loss, axis=-1)\n",
-    "kl_loss *= -0.5\n",
-    "\n",
-    "vae_loss = K.mean(kl_loss + m_vae_loss + a_vae_loss)\n",
-    "vae.add_loss(vae_loss)\n",
-    "vae.compile(optimizer='adam')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train the autoencoder\n",
-    "#vae.fit(x_train_1,\n",
-    "vae.fit(x_train,\n",
-    "        epochs=epochs,\n",
-    "        batch_size=batch_size)\n",
-    "        #validation_data=(x_test, None))\n",
-    "now = datetime.datetime.now()\n",
-    "vae.save_weights(\"vae_mnist_{0:%Y%m%d_%H%M%S}.h5\".format(now))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#正常/異常のテストデータ\n",
-    "#idx1 = np.random.randint(len(x_test_1))\n",
-    "#idx2 = np.random.randint(len(x_test_9))\n",
-    "idx1 = np.random.randint(len(x_test))\n",
-    "idx2 = idx1\n",
-    "\n",
-    "#test_normal = x_test_1[idx1,:,:,:]\n",
-    "test_normal = x_test[idx1,:,:,:]\n",
-    "#test_anomaly = x_test_9[idx2,:,:,:]\n",
-    "test_anomaly = x_test[idx2,:,:,:]\n",
-    "test_normal = test_normal.reshape(1, test_normal.shape[0], test_normal.shape[1], test_normal.shape[2])\n",
-    "test_anomaly = test_anomaly.reshape(test_normal.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#従来手法の可視化\n",
-    "#evaluate_img(vae, test_normal, test_anomaly, \"old_\")\n",
-    "\n",
-    "#提案手法の可視化\n",
-    "# evaluate_img(vae, test_normal, test_anomaly, \"new_\")\n",
-    "\n",
-    "evaluate_img(vae, test_normal, test_anomaly, \"new_\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "evaluate_img(vae, x_test_1[:50], x_test_2[:50], \"new_\")\n",
-    "evaluate_img(vae, x_test_1[:50], x_test_3[:50], \"new_\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "evaluate_img(vae, x_test_1[:50], x_test_4[:50], \"new_\")\n",
-    "evaluate_img(vae, x_test_1[:50], x_test_5[:50], \"new_\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate_img(vae, x_test_1[:50], x_test_6[:50], \"new_\")\n",
-    "evaluate_img(vae, x_test_1[:50], x_test_7[:50], \"new_\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate_img(vae, x_test_1[:50], x_test_8[:50], \"new_\")\n",
-    "evaluate_img(vae, x_test_1[:50], x_test_9[:50], \"new_\")"
+    "    #evaluate_img(vae, [x_train[i]], [x_test[i]], \"old_\")\n",
+    "    evaluate_img(vae, [x_train[i]], [x_test[i]], \"new_\")"
    ]
   },
   {
@@ -459,9 +373,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "py36_gpu",
    "language": "python",
-   "name": "venv"
+   "name": "py36_gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -473,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
